  [ Brendan Donegan ]
  * scripts/sources_test - modified script so that it takes sources list
    location and repository list as arguments
  * jobs/miscellanea.txt.in - provide REPOSITORY and SOURCES_LIST environment
    variables to the sources_test script (LP: #1149288)
  * Added mobile broadband tests and updated create_connection script to allow
    creation of mobile broadband connections.

  [ Sylvain Pineau ]
  * debian/control: Added python3-mock as a build dependency.
  * debian/rules: Clean __pycache__ directory after running scripts unit tests.

 -- Brendan Donegan <brendan.donegan@canonical.com>  Thu, 18 Apr 2013 12:49:02 +0100

checkbox (0.15.7) raring; urgency=low

  [ Zygmunt Krynicki ]
  * jobs/graphics.txt.in, jobs/suspend.txt.in: convert package resource 
    programs to be compatible with plainbox

  [ Brendan Donegan ]  
  * scripts/rendercheck_test, scripts/graphics_stress_test, 
    jobs/rendercheck.txt.in, jobs/stress.txt.in - Allow blacklisting of 
    specific rendercheck tests and use this to exclude the 'repeat' test
    from the set of rendercheck tests that run (LP: #1164566)
  
  [ Jeff Lane ]
  * jobs/info.txt.in: fixed bad driver name in audio_codecs job (LP: #1165215)
  * jobs/mediacard.txt.in: reduce test file size for MMC to 64MB (LP: #1167214)
  * jobs/led.txt.in, jobs/suspend.txt.in: removed bits about WLAN LED flashing
    from the WLAN jobs as that no longer happens on data tx/rx (LP: #1157606)
  * jobs/power-management.txt.in: added manual reboot and shutdown tests for
    server and Xen testing.  Took the opportunity to correct punctuation in the
    descriptions or other manual jobs.
    jobs/virtualization.txt.in: added virtualization/xen_ok and
    virtualization/xen_check_vms jobs for Xen testing
    scripts/xen_test: added script to perform Xen testing

  [ Jeff Marcom ]
  * scripts/virtualization - Fixes issue where console terminal would 
    remain hijacked by child kvm process (LP: #1164028)
