@@ -79,8 +79,9 @@ class LaunchpadReport(Plugin):
 
     def prompt_begin(self, interface):
         if self.submission_path_prompt:
+            # Ignore whether to submit to HEXR
             new_filename = interface.show_entry(
-                self.submission_path_prompt, self.filename)
+                self.submission_path_prompt, self.filename)[0]
             if new_filename != "":
                 self.filename = new_filename
 
